# sbbf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
benchmarks/: benchmark_config.hpp  sbbf_k_sensitivity.cpp  sbbf_seed_strategy.cpp
cmake/: sbbf-config.cmake.in
include/sbbf/: murmur.hpp  space_filling_curves.hpp  spatial_blocked_bloom_filter.hpp
python/: __init__.py  sbbf_bindings.cpp
scripts/: download_voxel_meshes.py  sbbf_k_sensitivity.py  sbbf_seed_strategy_voxel.py  sbbf_voxel_experiment.py
tests/: test_sbbf.cpp
